--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -16,21 +16,30 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Install package
-      run: |
-        pip install -e .
+    - name: Create Python Environment
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        environment-file: .github/workflows/envs/environment.yml
+        channels: conda-forge
+        activate-environment: test
+        show-channel-urls: true
+        miniforge-variant: Mambaforge
+        use-mamba: true
     - name: Lint with flake8
       run: |
-        pip install flake8
+        which python
+        python -m pip install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings.
         flake8 . --count --exit-zero --max-complexity=20 --max-line-length=100 --statistics
-    - name: Test with pytest
+    - name: Install package
+      shell: bash -l {0}
       run: |
-        pip install pytest
+        pip install -e .
+    - name: Test with pytest
+      shell: bash -l {0}
+      run: |
+        python -m pip install pytest
         pytest
