make a new requirements file for testing

--- a/.github/workflows/envs/environment.yml
+++ b/.github/workflows/envs/environment.yml
@@ -6,4 +6,4 @@ dependencies:
   - pymol-open-source>=2.3
   - pip
   - pip:
-    - -r ../../../requirements.txt
+    - -r ../../../requirements/requirements-test.txt
