--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -16,22 +16,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Create Python Environment
-      uses: conda-incubator/setup-miniconda@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-        environment-file: .github/workflows/envs/environment.yml
-        channels: conda-forge
-        activate-environment: test
-        show-channel-urls: true
-        miniforge-variant: Mambaforge
-        use-mamba: true
     - name: Install package
-      shell: bash -l {0}
       run: |
-        pip install -e .
-    - name: Test with pytest
-      shell: bash -l {0}
-      run: |
+        python -m pip install --upgrade pip
+        python -m pip install requirements/requirements-test.txt
         python -m pip install pytest
-        pytest
+        python -m pip install .
+    - name: Test with pytest
+      run: |
+        python -m pytest
