--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Install package
       run: |
         python -m pip install --upgrade pip
-        python -m pip install requirements/requirements-test.txt
+        python -m pip install -r requirements/requirements-test.txt
         python -m pip install pytest
         python -m pip install .
     - name: Test with pytest
